fix bug logic và cập nhật thêm 2 loại giá cho sản phẩm